[package]
name = "wayvol"
version = "0.1.0"
edition = "2021"
description = "Accessible GTK4 PipeWire volume mixer for Wayland"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
glib = "0.20"
gio = "0.20"
adw = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
async-channel = "2.3"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
